...
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_productListFragment"
            app:destination="@id/productListFragment" />
        <action
            android:id="@+id/action_homeFragment_to_formPengaduanLayananFragment"
            app:destination="@id/formPengaduanLayananFragment" />
        <action
            android:id="@+id/action_homeFragment_to_formBantuanOperatorFragment"
            app:destination="@id/formBantuanOperatorFragment" />
        <action
            android:id="@+id/action_homeFragment_to_formPemeliharaanAkunFragment"
            app:destination="@id/formPemeliharaanAkunFragment" />
...
