...
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/layanan"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:tabMode="scrollable"
        app:tabIndicatorGravity="stretch"
        app:tabIndicatorAnimationMode="elastic"
        android:background="@color/white"
...
        android:layout_marginVertical="8dp"
        app:tabSelectedTextColor="@color/white"
        app:tabIndicatorColor="@android:color/transparent"
        app:tabIndicatorHeight="0dp"
        app:tabRippleColor="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/view_pager_2"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
...
