<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/beranda"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/historyFragment"
        android:title="@string/riwayat"
        android:icon="@drawable/ic_history"/>

    <item
        android:id="@+id/scanFragment"
        android:title="@string/scan"
        android:icon="@drawable/ic_scan"/>

    <item
        android:id="@+id/profileFragment"
        android:title="@string/profil"
        android:icon="@drawable/ic_profile"/>
</menu>