...
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/btn_history_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_border_gray"
        android:orientation="vertical"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lihat_riwayat_peminjaman_barang_disini" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_history_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_border_gray"
        android:orientation="vertical"
...
